--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -199,7 +199,7 @@ div.page-overlay .overlay-background {
     position: absolute;
     z-index: 100;
     background: black;
-    opacity: 0.65;
+    opacity: 0.8;
 }
 
 div.panel-overlay.overlay {
@@ -223,9 +223,9 @@ div.overlay-background {
     background-color: white;
     padding: 14px;
     border-style: solid;
-    border-width: 10px;
+    border-width: 5px;
     border-color: rgb(41,137,216);
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .application-overlay .overlay-body {
@@ -779,6 +779,10 @@ div.overlay-background {
     right: 0;
 }
 
+#roommember-list-panel-container .panel-header .panel-header-nav-right .btn {
+    margin-top: 1px;
+}
+
 /* Message CSS
 *******************************************************************/
 
@@ -995,6 +999,15 @@ div.overlay-background {
 /* ImageUpload CSS
 *******************************************************************/
 
+#image-upload-container {
+    overflow: hidden;
+}
+
+#image-upload-container .box-body .box {
+    padding-left: 10px;
+    width: 89%;
+}
+
 #image-upload-container .box-body .box span {
     margin: 0% 33%;
 }
@@ -1047,6 +1060,10 @@ div.overlay-background {
 
 #file-upload-widget .btn-toolbar:last-child .btn-group {
     width: 82%;
+}
+
+.file-upload-item .filename, .image-upload-item .cancel-button, .image-upload-item .success-indicator {
+    display: inline-block;
 }
 
 @charset "UTF-8";
