Last few changes necessary to get production working

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -8,10 +8,10 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <meta name="description" content="Collaborative chat for developers">
-        <link rel="stylesheet" href="{{{config.staticUrl}}}/css/bootstrap.css" />
-        <link rel="stylesheet" href="{{{config.staticUrl}}}/css/bootstrap-responsive.css" />
-        <link rel="stylesheet" href="{{{config.staticUrl}}}/css/auth-buttons.css" />
-        <link rel="stylesheet" href="{{{config.staticUrl}}}/css/styles.css" />
+        <link rel="stylesheet" href="{{{staticUrl}}}/css/bootstrap.css" />
+        <link rel="stylesheet" href="{{{staticUrl}}}/css/bootstrap-responsive.css" />
+        <link rel="stylesheet" href="{{{staticUrl}}}/css/auth-buttons.css" />
+        <link rel="stylesheet" href="{{{staticUrl}}}/css/styles.css" />
 
         <!-- highlight.js -->
         <link rel="stylesheet" href="http://yandex.st/highlightjs/7.5/styles/default.min.css">
@@ -44,7 +44,7 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         </script>
 
         <!-- load airbug application -->
-        <script type="text/javascript" src="{{{config.staticUrl}}}/airbug-application-loader.js"></script>
+        <script type="text/javascript" src="{{{staticUrl}}}/airbug-application-loader.js"></script>
     </body>
 </html>
 
