changed location of feedback tab, moved higherup [finsihed #64180394]

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -39,7 +39,8 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
               tab_label: 'Feedback & Support',
               tab_color: '#cc6d00',
               tab_position: 'middle-right',
-              tab_inverted: false
+              tab_inverted: false,
+              top: '83px'
             }]);
         </script>
 
