Update. Creates UserImageAssetStream and List with full add and remove functionality. [Finishes story #64189598] Update. Delays the addition of the toolbar to the image upload items until upload and syncing is complete. [Finishes story #64185578]

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -1076,13 +1076,13 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
     overflow: hidden;
 }
 
-#image-upload-container>.box-body>.box {
+#image-upload-container.box>.box-body>.box {
     padding-left: 10px;
     width: 89%;
     overflow-y: scroll;
 }
 
-#image-upload-container .box-body .box>span:first-child {
+#image-upload-container.box>.box-body .box>span:first-child {
     margin: 0% 33%;
 }
 
