Add loading spinner for load of site. [Finishes story #64802488]

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -18,6 +18,16 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
     </head>
     <body>
+        <div id="application-loading-spinner" class="loading bar">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <script type="text/javascript">
             var _appConfig = JSON.parse("{{{config}}}");
         </script>
