zeroclipboard cannot cross between http and https. Protocol that we load swf from must match the domain swf. Allow for cross script access on different domains. Move the location where the swf file is located. [Finishes story #64769630]

--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -14,8 +14,8 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <link rel="stylesheet" href="{{{staticUrl}}}/css/styles.css" />
 
         <!-- highlight.js -->
-        <link rel="stylesheet" href="http://yandex.st/highlightjs/7.5/styles/default.min.css">
-        <script src="http://yandex.st/highlightjs/7.5/highlight.min.js"></script>
+        <link rel="stylesheet" href="//yandex.st/highlightjs/7.5/styles/default.min.css">
+        <script src="//yandex.st/highlightjs/7.5/highlight.min.js"></script>
     </head>
     <body>
         <div id="application-loading-spinner" class="loading bar">
@@ -31,7 +31,7 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <script type="text/javascript">
             var _appConfig = JSON.parse("{{{config}}}");
         </script>
-        <script type="text/javascript" src="https://d1jply0oquv2ju.cloudfront.net/bugpack-0.0.1.min.js"></script>
+        <script type="text/javascript" src="//d1jply0oquv2ju.cloudfront.net/bugpack-0.0.1.min.js"></script>
 
         <!-- UserVoice JavaScript SDK (only needed once on a page) -->
         <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/EYy2Up2867d0eT7mVPDhDQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
