Auto convert gist links to gist embeds [Finishes story #64882248]

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -1242,6 +1242,15 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
     margin-left: 5px;
 }
 
+
+/* Other
+*******************************************************************/
+
+.gist-embed {
+    border: none;
+}
+
+
 /* Twitter Bootstrap Overrides
 *******************************************************************/
 @media (max-width: 979px) {
