--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -13,9 +13,8 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <link rel="stylesheet" href="{{{staticUrl}}}/css/auth-buttons.css" />
         <link rel="stylesheet" href="{{{staticUrl}}}/css/styles.css" />
 
-        <!-- highlight.js -->
+        <!-- TODO BRN: Move this to cloudfront for delivery to avoid the additional DNS lookup-->
         <link rel="stylesheet" href="//yandex.st/highlightjs/7.5/styles/default.min.css">
-        <script src="//yandex.st/highlightjs/7.5/highlight.min.js"></script>
     </head>
     <body>
         <div id="application-loading-spinner" class="loading bar">
@@ -31,13 +30,20 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
         <script type="text/javascript">
             var _appConfig = JSON.parse("{{{config}}}");
         </script>
-        <script type="text/javascript" src="//d1jply0oquv2ju.cloudfront.net/bugpack-0.0.1.min.js"></script>
+        <script>
+            if (_appConfig.enableTracking) {
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                ga('create', _appConfing.googleAnalyticsId, 'airbug.com');
+                ga('send', 'pageview');
+            }
+        </script>
 
+        <!-- TODO BRN: Merge the async load code of this user voice script with whatever mechanism we come up with for loading our js files async -->
         <!-- UserVoice JavaScript SDK (only needed once on a page) -->
-        <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/EYy2Up2867d0eT7mVPDhDQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
-
-        <!-- UserVoice -->
-        <!-- A tab to launch the Classic Widget -->
+        <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='https://widget.uservoice.com/EYy2Up2867d0eT7mVPDhDQ.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
         <script>
             UserVoice = window.UserVoice || [];
             UserVoice.push(['showTab', 'classic_widget', {
@@ -54,7 +60,12 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
             }]);
         </script>
 
-        <!-- load airbug application -->
+        <!-- TODO BRN: Figure out how to load the blocking resources in an async way -->
+
+        <!-- TODO BRN: Move these to cloudfront for delivery to avoid the additional DNS lookup-->
+        <script src="//yandex.st/highlightjs/7.5/highlight.min.js"></script>
+
+        <script type="text/javascript" src="//d1jply0oquv2ju.cloudfront.net/bugpack-0.0.1.min.js"></script>
         <script type="text/javascript" src="{{{staticUrl}}}/airbug-application-loader.js"></script>
     </body>
 </html>
