--- a/projects/airbugclient/resources/views/home.mustache
+++ b/projects/airbugclient/resources/views/home.mustache
@@ -36,7 +36,7 @@ NOTE BRN: This file is just temporary for now. The serving of the index page wil
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-                ga('create', _appConfing.googleAnalyticsId, 'airbug.com');
+                ga('create', _appConfig.googleAnalyticsId, 'airbug.com');
                 ga('send', 'pageview');
             }
         </script>
