--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -940,6 +940,37 @@ div.previous-messages-loader {
     margin-top: 1px;
 }
 
+
+/* Loader CSS
+*******************************************************************/
+
+.loader {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+}
+
+.loader-image {
+    width: 100%;
+    height: auto;
+}
+
+.loader-small {
+    width: 32px;
+    height: 32px;
+}
+
+.loader-medium {
+    width: 64px;
+    height: 64px;
+}
+
+.loader-large {
+    width: 128px;
+    height: 128px;
+}
+
+
 /* Message CSS
 *******************************************************************/
 
