--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -1142,8 +1142,39 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
     cursor: pointer;
 }
 
+/* Workspace Widgets
+*******************************************************************/
+
+.workspace-widget {
+
+}
+
+.workspace-widget > .workspace-widget-header > .btn-toolbar {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0px;
+}
+
+.workspace-widget > .workspace-widget-header > .btn-toolbar > .btn-group .btn {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+
+.workspace-widget > .workspace-widget-header > .btn-toolbar > .btn-group .btn:first-child {
+    padding-left: 5px;
+}
+
+.workspace-widget > .workspace-widget-header > .btn-toolbar > .btn-group .btn:last-child {
+    padding-right: 5px;
+}
+
 /* CodeEditor and CodeEditorSettings CSS (borrows from Box CSS)
 *******************************************************************/
+
+.code-editor-widget {
+    background-color: black;
+}
 
 .code-editor-widget.box {
     position: relative;
@@ -1164,6 +1195,25 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
 .code-editor {
     width: 100%;
     height: 100%;
+}
+
+.code-editor-widget ul.nav-tabs > li > a, .code-editor-widget ol.nav-tabs > li > a {
+    color: white;
+}
+
+.code-editor-widget ul.nav-tabs > li.disabled > a, .code-editor-widget ol.nav-tabs > li.disabled > a,
+.code-editor-widget ul.nav-tabs > li.active > a, .code-editor-widget ol.nav-tabs > li.active > a {
+    color: black;
+}
+
+.code-editor-widget ul.nav-tabs > li:not(.active) > a, .code-editor-widget ol.nav-tabs > li:not(.active) > a,
+.code-editor-widget ul.nav-tabs > li:not(.active) > a:hover, .code-editor-widget ol.nav-tabs > li:not(.active) > a:hover {
+    background-color: black;
+}
+
+.code-editor-widget ul.nav-tabs > li.active > a,        .code-editor-widget ol.nav-tabs > li.active > a,
+.code-editor-widget ul.nav-tabs > li.active > a:hover,  .code-editor-widget ol.nav-tabs > li.active > a:hover {
+    background-color: #eeeeee;
 }
 
 
@@ -1327,6 +1377,42 @@ input[readonly].faux-textfield, textarea[readonly].faux-textarea {
 
 /* Twitter Bootstrap Overrides
 *******************************************************************/
+
+ul.nav-tabs > li, ol.nav-tabs > li {
+    border: 1px solid #ddd;
+    line-height: 12px;
+    border-radius: 4px 4px 0 0;
+}
+
+ul.nav-tabs > li:hover, ol.nav-tabs > li:hover {
+    cursor: pointer;
+    cursor: hand;
+}
+
+ul.nav-tabs > li.disabled:hover, ol.nav-tabs > li.disabled:hover,
+ul.nav-tabs > li.disabled a:hover, ol.nav-tabs > li.disabled a:hover {
+    cursor: default;
+}
+
+ul.nav-tabs > li:not(.active) > a, ol.nav-tabs > li:not(.active) > a,
+ul.nav-tabs > li:not(.active) > a:hover, ol.nav-tabs > li:not(.active) > a:hover {
+    background-color: #eeeeee;
+}
+
+ul.nav-tabs > li > a:hover, ol.nav-tabs > li > a:hover {
+    background-color: inherit;
+}
+
+ul.nav-tabs > li > a, ol.nav-tabs > li > a {
+    letter-spacing: -0.25px;
+    line-height: 12px;
+    font-weight: 400;
+    color: black;
+}
+
+ul.nav-tabs > li.disabled > a, ol.nav-tabs > li.disabled > a {
+    color: black;
+}
 
 .control-group-space {
     margin-bottom: 20px;
