Add start to Settings panel

--- a/projects/airbugclient/static/css/styles.css
+++ b/projects/airbugclient/static/css/styles.css
@@ -666,7 +666,7 @@ div.page-overlay>.overlay-body.fullscreen-overlay {
 }
 
 .user-name {
-    position: absolute;
+    position: relative;
     left: 34px;
     right: 5px;
 }
